semiproject v2 boiler plate

--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
        <div class="container">
            <header class="row">
                <div class="col text-primary"><h1>Lorem Ipsum</h1></div>
-               <div class="col text-right"><h1><button type="button" class="btn btn-danger">로그인</button>
+               <div class="col text-right"><h1><button type="button" class="btn btn-danger"
+                           data-toggle="modal" data-target="#loginfrm">로그인</button>
                     <button type="button" class="btn btn-primary">회원가입</button></h1></div>
            </header>
 
-           <nav class="row">
-               <ul class="list-inline">
-                   <li class="list-inline-item">프로젝트소개</li>
-                   <li class="list-inline-item">회원가입</li>
-                   <li class="list-inline-item">게시판</li>
-                   <li class="list-inline-item">자료실</li>
-                   <li class="list-inline-item">갤러리</li>
-                   <li class="list-inline-item">관리자</li>
+           <nav class="navbar navbar-expand navbar-dark bg-dark">
+               <ul class="navbar-nav nav-fill w-100">
+                   <li class="nav-item"><a href="#" class="nav-link">프로젝트소개</a></li>
+                   <li class="nav-item"><a href="#" class="nav-link">회원가입</a></li>
+                   <li class="nav-item"><a href="#" class="nav-link">게시판</a></li>
+                   <li class="nav-item"><a href="#" class="nav-link">자료실</a></li>
+                   <li class="nav-item"><a href="#" class="nav-link">갤러리</a></li>
+                   <li class="nav-item"><a href="#" class="nav-link">관리자</a></li>
                </ul>
            </nav>
 
@@ -88,6 +89,38 @@
                <h6 class="col bg-light text-right rounded">
                    &copy; Lorem Ipsum 2021. Created by Bootstrap4. All Rights Reserved.</h6>
            </footer>
+       </div>
+
+       <!-- 로그인 폼 모달 -->
+       <div class="modal" id="loginfrm" tabindex="-1" role="dialog">
+           <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h3>로그인</h3>
+                        <button type="button" class="btn btn-light">닫기</button>
+                    </div>
+                    <div class="modal-body">
+                        <form name="loginfrm" id="loginfrm" method="post">
+                        <div class="form-group row text-danger">
+                            <label for="userid" class="col-form-label col-4 text-right">아이디</label>
+                            <input type="text" class="form-control col-5 border-danger" name="userid" id="userid"></div>
+                        <div class="form-group row text-danger">
+                            <label for="passwd" class="col-form-label col-4 text-right">비밀번호</label>
+                            <input type="password" class="form-control col-5 border-danger" name="passwd" id="passwd"></div>
+                        <div class="form-group row">
+                            <div class="col-4"></div>
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input">
+                                <label class="form-check-label text-warning">로그인 상태 유지</label></div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer justify-content-center">
+                           <button type="button" class="btn btn-danger">로그인</button>
+                           <button type="button" class="btn btn-warning text-white">아이디/비밀번호 찾기</button>
+                    </div>
+                </div>
+           </div>
        </div>
 
     <!-- jQuery and Bootstrap Bundle (includes Popper) -->
