--- a/join/checkme.html
+++ b/join/checkme.html
@@ -119,22 +119,27 @@
 
                <div class="card card-body bg-light">
                    <h3>실명확인 회원가입</h3>
-                   <form id="checkfrm2" name="checkfrm2" >
+                   <form id="checkfrm2" name="checkfrm2">
                        <div class="row">
                            <div class="col-5 offset-1">
                                <div class="form-group row">
-                                   <label class="col-4 col-form-label text-right text-warning" for="name">이름</label>
-                                   <input type="text" name="name" id="name" class="form-control border-warning col-6">
+                                   <label class="col-4 col-form-label text-right text-warning" for="name2">이름</label>
+                                   <input type="text" name="name" id="name2" class="form-control border-warning col-6">
                                </div> <!-- 이름 -->
                                <div class="form-group row">
                                    <label class="col-4 col-form-label text-right text-warning" for="jumin1">주민번호</label>
-                                   <input type="text" name="jumin1" id="jumin1" class="form-control border-warning col-3"> &minus;
+                                   <input type="text" name="jumin1" id="jumin1" class="form-control border-warning col-3">
+                                   <span class="col-form-label">&nbsp; &mdash; &nbsp;</span>
                                    <input type="password" name="jumin2" id="jumin2" class="form-control border-warning col-3">
                                </div> <!-- 주민번호 -->
-                               <div class="form-group">
-                                   <input type="checkbox" name="agrjumin" id="agrjumin" class="form-control-input col-1 offset-4">
-                                   <label class="form-control-label text-warning" for="agrjumin">주민등록번호 처리에 동의합니다.</label></div>
-                               </div> <!-- 동의 -->
+                               <div class="form-group row">
+                                   <label class="col-4"></label>
+                                   <div class="custom-control custom-checkbox">
+                                       <input type="checkbox" name="chkjumin" id="chkjumin" class="custom-control-input" value="y">
+                                       <label class="custom-control-label text-warning" for="chkjumin">주민등록번호 처리에 동의합니다.</label>
+                                   </div>
+                               </div> <!-- 주민번호 동의 -->
+                           </div> <!-- 이름, 주민번호 부분 -->
 
                            <div class="col-5">
                                <ul class="" style="color: blue; font-weight: bold">
@@ -147,6 +152,7 @@
                        </div> <!-- 이름 및 안내 -->
                        <div class="row">
                            <div class="col text-center">
+                               <hr>
                                <button type="button" class="btn btn-primary"><i class="fas fa-check"> 확인하기</i></button>
                                <button type="button" class="btn btn-danger"><i class="fas fa-times"> 취소하기</i></button>
                            </div>
