--- a/board/write.html
+++ b/board/write.html
@@ -26,7 +26,7 @@
                <ul class="navbar-nav nav-fill w-100">
                    <li class="nav-item"><a href="#" class="nav-link">프로젝트소개</a></li>
                    <li class="nav-item"><a href="#" class="nav-link">회원가입</a></li>
-                   <li class="nav-item active"><a href="#" class="nav-link">게시판</a></li>
+                   <li class="nav-item active"><a class="nav-link">게시판</a></li>
                    <li class="nav-item"><a href="#" class="nav-link">자료실</a></li>
                    <li class="nav-item"><a href="#" class="nav-link">갤러리</a></li>
                    <li class="nav-item"><a href="#" class="nav-link">관리자</a></li>
