--- a/join/agree.html
+++ b/join/agree.html
@@ -408,5 +408,15 @@ Copyright © Kakao Corp. All rights reserved.
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 
+    <script>
+        $('#okagree').click(function() {
+            if (!$('#agree1').is(':checked') || $('#agree2').is(':checked') == false)
+                 alert('이용약관에 동의해 주세요!');
+//                 agree1.focus();
+            else location.href='/join/checkme.html'; });
+
+        $('#noagree').click(function() { location.href='/index.html'});
+    </script>
+
   </body>
 </html>
