--- a/join/joinok.html
+++ b/join/joinok.html
@@ -25,7 +25,7 @@
            <nav class="navbar navbar-expand navbar-dark bg-dark">
                <ul class="navbar-nav nav-fill w-100">
                    <li class="nav-item"><a href="#" class="nav-link">프로젝트소개</a></li>
-                   <li class="nav-item"><a href="#" class="nav-link">회원가입</a></li>
+                   <li class="nav-item active"><a class="nav-link">회원가입</a></li>
                    <li class="nav-item"><a href="#" class="nav-link">게시판</a></li>
                    <li class="nav-item"><a href="#" class="nav-link">자료실</a></li>
                    <li class="nav-item"><a href="#" class="nav-link">갤러리</a></li>
